bpy.ops.paint.project_image(image=image_name) degrades high dynamic range to ~8bit #47168

Closed
opened 2016-01-12 13:37:19 +01:00 by Dmitry Mozzherin · 7 comments

System Information
Ubuntu 14.04

System: Kernel: 3.19.0-43-generic x86_64 (64 bit, gcc: 4.8.2) Desktop: Gnome Distro: Ubuntu 14.04 trusty
Machine: Mobo: ASUSTeK model: SABERTOOTH X79 version: Rev 1.xx Bios: American Megatrends version: 4502 date: 10/15/2013
CPU: Hexa core Intel Core i7-4930K CPU (-HT-MCP-) cache: 12288 KB flags: (lm nx sse sse2 sse3 sse4_1 sse4_2 ssse3 vmx) bmips: 49503.9

         Clock Speeds: 1: 1316.132 MHz 2: 2101.558 MHz 3: 1300.535 MHz 4: 1294.734 MHz 5: 2049.222 MHz 6: 1799.144 MHz 7: 1805.074 MHz 8: 1717.031 MHz 9: 1672.429 MHz 10: 1703.882 MHz 11: 1668.046 MHz 12: 2000.625 MHz

Graphics: Card-1: NVIDIA GK110B [GeForce GTX 780 Ti] bus-ID: 01:00.0

         Card-2: NVIDIA GK110B [GeForce GTX 780 Ti] bus-ID: 02:00.0 
         X.Org: 1.17.1 drivers: nvidia,nouveau (unloaded: fbdev,vesa) Resolution: 1920x1200@59.9hz 
         GLX Renderer: GeForce GTX 780 Ti/PCIe/SSE2 GLX Version: 4.5.0 NVIDIA 352.63 Direct Rendering: Yes

Blender Version
Broken: 2.76.b f337fea

Short description of error

project_image function degrades high dynamic range to apparently 8bits, even when it saves into 32bit image.

Detailed description and examples are in Blender Exchange Questions --

http://blender.stackexchange.com/questions/44698/how-to-project-an-image-of-high-dynamic-range

http://blender.stackexchange.com/questions/44328/is-it-possible-to-increase-the-dynamic-range-of-external-quick-edit?lq=1

Example file:

https://github.com/dimus/project_image/raw/master/project_image.blend

Example Image

**System Information** Ubuntu 14.04 System: Kernel: 3.19.0-43-generic x86_64 (64 bit, gcc: 4.8.2) Desktop: Gnome Distro: Ubuntu 14.04 trusty Machine: Mobo: ASUSTeK model: SABERTOOTH X79 version: Rev 1.xx Bios: American Megatrends version: 4502 date: 10/15/2013 CPU: Hexa core Intel Core i7-4930K CPU (-HT-MCP-) cache: 12288 KB flags: (lm nx sse sse2 sse3 sse4_1 sse4_2 ssse3 vmx) bmips: 49503.9 ``` Clock Speeds: 1: 1316.132 MHz 2: 2101.558 MHz 3: 1300.535 MHz 4: 1294.734 MHz 5: 2049.222 MHz 6: 1799.144 MHz 7: 1805.074 MHz 8: 1717.031 MHz 9: 1672.429 MHz 10: 1703.882 MHz 11: 1668.046 MHz 12: 2000.625 MHz ``` Graphics: Card-1: NVIDIA GK110B [GeForce GTX 780 Ti] bus-ID: 01:00.0 ``` Card-2: NVIDIA GK110B [GeForce GTX 780 Ti] bus-ID: 02:00.0 X.Org: 1.17.1 drivers: nvidia,nouveau (unloaded: fbdev,vesa) Resolution: 1920x1200@59.9hz GLX Renderer: GeForce GTX 780 Ti/PCIe/SSE2 GLX Version: 4.5.0 NVIDIA 352.63 Direct Rendering: Yes ``` **Blender Version** Broken: 2.76.b f337fea **Short description of error** project_image function degrades high dynamic range to apparently 8bits, even when it saves into 32bit image. Detailed description and examples are in Blender Exchange Questions -- http://blender.stackexchange.com/questions/44698/how-to-project-an-image-of-high-dynamic-range http://blender.stackexchange.com/questions/44328/is-it-possible-to-increase-the-dynamic-range-of-external-quick-edit?lq=1 Example file: https://github.com/dimus/project_image/raw/master/project_image.blend [Example Image ](http://i.stack.imgur.com/QnePx.png)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DmitryMozzherin

Added subscriber: @DmitryMozzherin

Added subscriber: @mont29

Added subscriber: @mont29

This is huge and complex file… Can you please make a simple, small .blend file, with clear steps to reproduce the issue, as requested by the submission template and guidelines? We need simple cases to understand and investigate issues easily.

Have had a quick look at project_paint code, there is a TODO in it related to reprojection, it only uses 8bit data currently. Should not be hard to add float support, but having a simple file making it easy to test would help a lot…

This is huge and complex file… Can you please make a simple, small .blend file, with clear steps to reproduce the issue, as requested by the submission template and guidelines? We need simple cases to understand and investigate issues easily. Have had a quick look at project_paint code, there is a TODO in it related to reprojection, it only uses 8bit data currently. Should not be hard to add float support, but having a simple file making it easy to test would help a lot…

I removed images from the blend file (https:*github.com/dimus/project_image/raw/master/project_image.blend) and added text with steps to reproduce the problem. Optionally with "git clone https:*github.com/dimus/project_image.git" you can get the blend file and an external render.exr file to use for projection.

More detailed steps are given in http://blender.stackexchange.com/a/44705/1311

I removed images from the blend file (https:*github.com/dimus/project_image/raw/master/project_image.blend) and added text with steps to reproduce the problem. Optionally with "git clone https:*github.com/dimus/project_image.git" you can get the blend file and an external render.exr file to use for projection. More detailed steps are given in http://blender.stackexchange.com/a/44705/1311
Campbell Barton self-assigned this 2016-01-14 08:29:04 +01:00

This issue was referenced by 5d45c2bf65

This issue was referenced by 5d45c2bf653c78928fb33548273219ef5caa5287

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47168
No description provided.