Fix T47168: Project image looses float precision